--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               autem inventore, fuga velit eos quis quidem numquam sapiente
               accusamus ut.
             </p>
-            <a href="#">Read more</a>
+            <a href="#">Infos</a>
           </div>
         </div>
       </div>
