--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>01</h2>
             <h3>Card one</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+              Lorem  dolor, sit amet consectetur adipisicing elit. Officiis
               autem inventore, fuga velit eos quis quidem numquam sapiente
               accusamus ut.
             </p>
@@ -31,7 +31,7 @@
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
               autem inventore, fuga velit eos quis quidem numquam sapiente
-              accusamus ut.
+              accusamus .
             </p>
             <a href="#">Read more</a>
           </div>
@@ -41,6 +41,20 @@
         <div class="box">
           <div class="content">
             <h2>03</h2>
+            <h3>Card three</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+              autem inventore, fuga velit eos quis quidem numquam sapiente
+              accusamus ut.
+            </p>
+            <a href="#">Infos</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="box">
+          <div class="content">
+            <h2>04</h2>
             <h3>Card three</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
