--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="box">
           <div class="content">
             <h2>02</h2>
-            <h3>Card two</h3>
+            <h3>Card twoo</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
               autem inventore, fuga velit eos quis quidem numquam sapiente
@@ -41,20 +41,6 @@
         <div class="box">
           <div class="content">
             <h2>03</h2>
-            <h3>Card three</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-              autem inventore, fuga velit eos quis quidem numquam sapiente
-              accusamus ut.
-            </p>
-            <a href="#">Infos</a>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="box">
-          <div class="content">
-            <h2>04</h2>
             <h3>Card three</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
