--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="box">
           <div class="content">
             <h2>02</h2>
-            <h3>Card twoo</h3>
+            <h3>Card two</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
               autem inventore, fuga velit eos quis quidem numquam sapiente
